# backend_blood_donor_api

./: .env  .env.example  ARCHITECTURE.md  AUTH_IMPLEMENTATION.md  DOCKER_SETUP_COMPLETE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  MIGRATION_IMPLEMENTATION.md  QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  START_HERE.md  USER_IMPLEMENTATION.md  alembic.ini  backend_requirements.md  command.md  complete_setup.sh  create_enums.sql  create_tables.sql  docker-compose.yml  fast_credentials.md  final_setup.sh  main.py  pyproject.toml  requirements.txt  seed_data.py  seed_data.sql  setup_database.sh  verify_schema.sql
alembic/: env.py
alembic/versions/: 001_create_users_table.py  002_add_theme_preference.py  003_create_donor_tables.py  004_create_messages_notifications.py  005_create_donations_requests.py
app/: main.py
app/core/: celery_app.py  config.py  dependencies.py  logging.py  security.py
app/db/: dependencies.py  session.py
app/middleware/: exception_handler.py
app/models/: donation.py  donor.py  message.py  notification.py  user.py
app/routers/: alerts.py  auth.py  donations.py  donor_registrations.py  donors.py  messages.py  notifications.py  reports.py  users.py
app/schemas/: auth.py  donation.py  donor.py  donor_profile.py  message.py  notification.py  user.py
app/services/: alert_service.py  donation_service.py  notification_service.py
tests/: debug_registration.py  simple_test.py  test_registration.py
